# python-rust-torch-playground

./: Cargo.toml  README.md  build.rs  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
python/__tests__/: __init__.py
python/python_rust_torch_playground/: __init__.py
python/tests/: __init__.py
rust/: lib.rs
scripts/: build.py  ci.py  clear.py  dev.py  prepare.py  prepublish.py  u_env.py  util_env.py  x_build.py  x_build_pyo3.py  x_ci.py  x_clear.py  x_dev.py  x_dev_pyo3.py  x_format.py  x_prepare.py  x_test.py
