[package]
edition = "2021"
name = "python-rust-torch-playground"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "python_rust_torch_playground"
path = "rust/lib.rs"

[dependencies]
pyo3 = {version = "0.18.3", features = ["extension-module", "generate-import-lib"]}
pyo3-tch = "0.15.0"
