[build-system]
build-backend = "maturin"
requires = ["maturin>=1.5,<2.0"]

[project]
classifiers = [
  "Framework :: PyTorch",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
name = "python-rust-torch-playground"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "python_rust_torch_playground.python_rust_torch_playground"
python-source = "python"

[tool.poetry]
authors = ["Asher Jingkong Chen"]
description = "A playground for Python, Rust, and PyTorch"
name = "python-rust-torch-playground"
version = "0.0.0"

[tool.poetry.dependencies]
numpy = "^1.26.0"
python = "^3.9"
torch = "^2.2.0"

[tool.poetry.dev-dependencies]
maturin = "^1.5"
