[build-system]
build-backend = "maturin"
requires = ["maturin>=1.5,<2.0"]

[project]
authors = [{name = "Asher Jingkong Chen"}]
classifiers = [
  "Framework :: PyTorch",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "A playground for Python, Rust, and PyTorch"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "python-rust-torch-playground"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.0"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "python_rust_torch_playground.python_rust_torch_playground"
python-source = "python"

[tool.poetry]
name = "python-rust-torch-playground"
package-mode = false

[tool.poetry.dependencies]
numpy = "^1.26.0"
python = "^3.10"
torch = "2.2.0"

[tool.poetry.dev-dependencies]
maturin = "^1.5"
