[build-system]
build-backend = "maturin"
requires = ["maturin>=1.5,<2.0"]

[project]
authors = [{name = "Asher Jingkong Chen"}]
classifiers = [
  "Framework :: PyTorch",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy >= 1.26.4",
  "torch == 2.2.0",
]
description = 'A playground for Python, Rust, and PyTorch'
keywords = ['python', "rust", "pytorch", "demo"]
license = {file = "LICENSE"}
name = "python-rust-torch-playground"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.0"

[project.urls]
Homepage = "https://github.com/AsherJingkongChen/python-rust-torch-playground/blob/main/README.md"
Repository = "https://github.com/AsherJingkongChen/python-rust-torch-playground.git"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "python_rust_torch_playground.python_rust_torch_playground"
python-source = "python"
